some cleanup and fixes, still many things broken